# codespace-poc

./: .flake8  Makefile  README.md  output_report.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: question.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  new_feature.md  refactor.md
.github/workflows/: pandoc.yaml  py_lint.yaml  security.yaml  testing.yaml
docs/: vscode_extensions.md
src/: app.py
tests/: test_app.py
