[project]
name = "src"
version = "0.1.0"
description = "A Simple To Do List Streamlit App"
authors = [
    {name = "kieran.pritchard@ons.gov.uk"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.46.0,<2.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
pytest-cov = "^6.2.1"
bandit = "^1.8.5"
mypy = "^1.16.1"
pytest-xdist = "^3.7.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
